--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/images/logoimmothp.png" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="description" content="Trouvez la maison de vos rêves avec Immo THP." />
 
-    <title>Vite + React</title>
+    <title>Immo THP - Votre partenaire immobilier</title>
 
 
   </head>
